--- a/Application/.env
+++ b/Application/.env
@@ -1,4 +1,5 @@
-SQLALCHEMY_DATABASE_URI = 'sqlite:///Databse.db'
+# SQLALCHEMY_DATABASE_URI = 'sqlite:///Databse.db'
+SQLALCHEMY_DATABASE_URI = 'mysql+pymysql:///root:password@mysql:3306/blog'
 REDIS_SERVER_URL = 'redis://RedisRegister:6379'
 
 MAIL_SERVER = 'smtp.gmail.com'
