--- a/Application/requirements.txt
+++ b/Application/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.13.1
+async-timeout==4.0.3
 bcrypt==4.1.2
 blinker==1.7.0
 bottle==0.12.25
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.4
 Flask==3.0.2
 Flask-Bcrypt==1.0.1
 Flask-CKEditor==0.5.1
@@ -20,6 +23,8 @@ keyboard==0.13.5
 Mako==1.3.2
 MarkupSafe==2.1.5
 packaging==23.2
+pycparser==2.21
+PyMySQL==1.1.0
 python-dotenv==1.0.1
 redis==5.0.1
 SQLAlchemy==2.0.26
