Docking the project

--- a/Application/.env.example
+++ b/Application/.env.example
@@ -1,9 +1,83 @@
-SQLALCHEMY_DATABASE_URI =
-REDIS_SERVER_URL =
+DOMAIN = 'localhost'
 
-MAIL_SERVER =
-MAIL_PASSWORD =
-MAIL_PORT =
-MAIL_USERNAME =
 
-SERVER_NAME_MAIL = 'localhost:5000'
+# # # Mali Server Config
+MAIL_SERVER = 'smtp.gmail.com'
+MAIL_USERNAME = 'armanparsi536@gmail.com'
+MAIL_PASSWORD = ''
+MAIL_PORT = '465'
+
+# # # Enter your website address. This will be used to send the link in the email
+SERVER_NAME_MAIL = '${DOMAIN}'
+
+# # # App Configs...
+APP_CONTAINER_NAME = "afsane"
+APP_PORT = '5000'
+# # Resources
+APP_MEM_LIMIT = '512M'
+APP_MEM_RESERVATION = '128M'
+APP_CPUS = '0.30'
+# # logging
+APP_LOGGING_DRIVER = 'json-file'
+APP_LOGGING_MAX_SIZE = '10m'
+APP_LOGGING_MAX_FILE = '10'
+APP_LOGGING_LABELS = 'Docker LogDriver - Main App(Flask Application)'
+APP_LOGGING_ENV = 'os'
+
+# # # Nginx Configs...
+NGNIX_CONTAINER_NAME = "nginx-${APP_CONTAINER_NAME}"
+# NGNIX_CONFIG_DEFAULT = './Docker/nginx.conf'
+NGNIX_CONFIG_TEMPLATE = './Docker/nginx.conf.template'
+NGNIX_CONFIG_SETUP = './Docker/nginx-setup.sh'
+NGNIX_HOST_PORT = '8080'
+NGNIX_LOCAL_PORT = '80'
+NGNIX_SERVER_NAME = '${DOMAIN}'
+# # Resources
+NGNIX_MEM_LIMIT = '512M'
+NGNIX_MEM_RESERVATION = '128M'
+NGNIX_CPUS = '0.50'
+# # logging
+NGNIX_LOGGING_DRIVER = 'json-file'
+NGNIX_LOGGING_MAX_SIZE = '10m'
+NGNIX_LOGGING_MAX_FILE = '10'
+NGNIX_LOGGING_LABELS = 'Docker LogDriver - Nginx(Web Server)'
+NGNIX_LOGGING_ENV = 'os'
+
+
+# # # MySQL Confgis...
+MYSQL_CONTAINER_NAME = "mysql-${APP_CONTAINER_NAME}"
+MYSQL_DATABASE = 'blog'
+MYSQL_USER = 'user'
+MYSQL_PASSWORD = 'password'
+MYSQL_ROOT_PASSWORD = 'password'
+MYSQL_PORT = '3306'
+# # Resources
+MYSQL_MEM_LIMIT = '1024M'
+MYSQL_MEM_RESERVATION = '512M'
+MYSQL_CPUS = '0.40'
+# # logging
+MYSQL_LOGGING_DRIVER = 'json-file'
+MYSQL_LOGGING_MAX_SIZE = '10m'
+MYSQL_LOGGING_MAX_FILE = '10'
+MYSQL_LOGGING_LABELS = 'Docker LogDriver - MySQL(DataBase)'
+MYSQL_LOGGING_ENV = 'os'
+
+
+# # # Redis Configs...
+REDIS_REGISTER_CONTAINER_NAME = "redisRegister-${APP_CONTAINER_NAME}"
+REDIS_REGISTER_PORT = '6379'
+# # Resources
+REDIS_REGISTER_MEM_LIMIT = '128M'
+REDIS_REGISTER_MEM_RESERVATION = '64M'
+REDIS_REGISTER_CPUS = '0.10'
+# # logging
+REDIS_REGISTER_LOGGING_DRIVER = 'json-file'
+REDIS_REGISTER_LOGGING_MAX_SIZE = '10m'
+REDIS_REGISTER_LOGGING_MAX_FILE = '10'
+REDIS_REGISTER_LOGGING_LABELS = 'Docker LogDriver - Redis(for email confirm)'
+REDIS_REGISTER_LOGGING_ENV = 'os'
+
+
+# SQLALCHEMY_DATABASE_URI = 'sqlite:///Databse.db'
+SQLALCHEMY_DATABASE_URI = "mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:${MYSQL_PORT}/${MYSQL_DATABASE}"
+REDIS_SERVER_URL = "redis://RedisRegister:${REDIS_REGISTER_PORT}"
