--- a/Application/Docker/dockerfile
+++ b/Application/Docker/dockerfile
@@ -2,14 +2,9 @@ FROM python:3.10-slim
 
 WORKDIR /Application
 
-COPY . .
+COPY ../ .
 
 RUN python3 -m pip install -r requirements.txt
 
-# Steup DataBase
-RUN python3 manage.py create-db
-
-# Create Admin User
-RUN python3 manage.py create-admin admin admin@email.e admin
-
+EXPOSE 5000
 CMD [ "gunicorn", "-b", "0.0.0.0:5000", "app:app" ]
