--- a/Application/.env.example
+++ b/Application/.env.example
@@ -11,7 +11,7 @@ MAIL_PORT = '465'
 SERVER_NAME_MAIL = '${DOMAIN}'
 
 # # # App Configs...
-APP_CONTAINER_NAME = "afsane"
+APP_CONTAINER_NAME = "Arash"
 APP_PORT = '5000'
 # # Resources
 APP_MEM_LIMIT = '512M'
