--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
+*.html linguist-detectable=false
+*.htm inguist-detectable=false
+
 *.css linguist-detectable=false
-*.html inguist-detectable=false
+*.css inguist-detectable=false
