--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,11 @@
 *.html linguist-detectable=false
+*.html inguist-detectable=false
+
+*.htm linguist-detectable=false
 *.htm inguist-detectable=false
 
 *.scss linguist-detectable=false
 *.scss inguist-detectable=false
+
+*.css linguist-detectable=false
+*.css inguist-detectable=false
