--- a/Application/.env.example
+++ b/Application/.env.example
@@ -1,4 +1,4 @@
-DOMAIN = 'localhost'
+DOMAIN = 'localhost:8080'
 
 
 # # # Mali Server Config
@@ -8,7 +8,7 @@ MAIL_PASSWORD = ''
 MAIL_PORT = '465'
 
 # # # Enter your website address. This will be used to send the link in the email
-SERVER_NAME_MAIL = '${DOMAIN}'
+SERVER_NAME_MAIL = ${DOMAIN}
 
 # # # App Configs...
 APP_CONTAINER_NAME = "Arash"
@@ -31,7 +31,7 @@ NGNIX_CONFIG_TEMPLATE = './Docker/nginx.conf.template'
 NGNIX_CONFIG_SETUP = './Docker/nginx-setup.sh'
 NGNIX_HOST_PORT = '8080'
 NGNIX_LOCAL_PORT = '80'
-NGNIX_SERVER_NAME = '${DOMAIN}'
+NGINX_SERVER_NAME = ${DOMAIN}
 # # Resources
 NGNIX_MEM_LIMIT = '512M'
 NGNIX_MEM_RESERVATION = '128M'
@@ -80,4 +80,4 @@ REDIS_REGISTER_LOGGING_ENV = 'os'
 
 # SQLALCHEMY_DATABASE_URI = 'sqlite:///Databse.db'
 SQLALCHEMY_DATABASE_URI = "mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:${MYSQL_PORT}/${MYSQL_DATABASE}"
-REDIS_SERVER_URL = "redis://RedisRegister:${REDIS_REGISTER_PORT}"
+REDIS_SERVER_URL = "redis://reids_register:${REDIS_REGISTER_PORT}"
