--- a/Application/docker-compose.yml
+++ b/Application/docker-compose.yml
@@ -9,15 +9,18 @@ services:
     build: 
       context: .
       dockerfile: ./Docker/dockerfile
-    image: afsane:0.9.1
+    image: arash-blog:0.9.1
     restart: always
-    
+    # command: flask run --debug --host "0.0.0.0" --port 5000
     # resources
     mem_limit: ${APP_MEM_LIMIT}
     mem_reservation: ${APP_MEM_RESERVATION}
     cpus: ${APP_CPUS}
     
     # config's
+    volumes:
+      - files-data:/Application/static/:rw
+      - .:/Application/:ro
     networks:
       - app-net
     depends_on:
@@ -49,12 +52,11 @@ services:
     environment:
       LISTEN_PORT: 80
       APP_PORT: ${APP_PORT}
-      NGNIX_SERVER_NAME: ${NGNIX_SERVER_NAME}
+      NGINX_SERVER_NAME: ${NGINX_SERVER_NAME}
     volumes:
-      # - ${NGNIX_CONFIG_DEFAULT}:/etc/nginx/org.nginx.conf:ro
       - ${NGNIX_CONFIG_TEMPLATE}:/etc/nginx/org.nginx.conf.template:ro
       - $NGNIX_CONFIG_SETUP:/nginx-setup.sh:ro
-      - ./static:/var/static/:ro
+      - files-data:/var/static/:ro
     depends_on:
       - app
     networks:
@@ -137,5 +139,7 @@ networks:
 
 volumes:
   db-data:
+    driver: local
+  files-data:
     driver: local
 
